@@ -2360,18 +2360,19 @@ carmichael_lambda(IN SV* svn)
     chebyshev_psi = 7
     factorial = 8
     sqrtint = 9
-    exp_mangoldt = 10
-    znprimroot = 11
-    hammingweight = 12
-    hclassno = 13
-    is_pillai = 14
-    absint = 15
-    negint = 16
-    ramanujan_tau = 17
+    qnr = 10
+    exp_mangoldt = 11
+    znprimroot = 12
+    hammingweight = 13
+    hclassno = 14
+    is_pillai = 15
+    absint = 16
+    negint = 17
+    ramanujan_tau = 18
   PREINIT:
     int status;
   PPCODE:
-    status = _validate_int(aTHX_ svn, (ix >= 10) ? 1 : 0);
+    status = _validate_int(aTHX_ svn, (ix >= 11) ? 1 : 0);
     if (status != 0) {
       UV r, n = my_svuv(svn);
       switch (ix) {
@@ -2387,23 +2388,24 @@ carmichael_lambda(IN SV* svn)
                  if (r != 0) XSRETURN_UV(r);
                  status = 0; break;
         case 9:  XSRETURN_UV(isqrt(n)); break;
-        case 10: XSRETURN_UV( (status == -1) ? 1 : exp_mangoldt(n) ); break;
-        case 11: if (status == -1) n = -(IV)n;
+        case 10: RETURN_NPARITY(qnr(n)); break;
+        case 11: XSRETURN_UV( (status == -1) ? 1 : exp_mangoldt(n) ); break;
+        case 12: if (status == -1) n = -(IV)n;
                  r = znprimroot(n);
                  if (r == 0 && n != 1)  XSRETURN_UNDEF;  /* No root */
                  XSRETURN_UV(r);  break;
-        case 12: if (status == -1) n = -(IV)n;
+        case 13: if (status == -1) n = -(IV)n;
                  XSRETURN_UV(popcnt(n));  break;
-        case 13: XSRETURN_IV( (status == -1) ? 0 : hclassno(n) ); break;
-        case 14: RETURN_NPARITY( (status == -1) ? 0 : pillai_v(n) ); break;
-        case 15: if (status == -1 && my_sviv(svn) < -IV_MAX) status = 0;
+        case 14: XSRETURN_IV( (status == -1) ? 0 : hclassno(n) ); break;
+        case 15: RETURN_NPARITY( (status == -1) ? 0 : pillai_v(n) ); break;
+        case 16: if (status == -1 && my_sviv(svn) < -IV_MAX) status = 0;
                  else XSRETURN_UV( (status == -1) ? -(IV)n : n );
                  break;
-        case 16: if (status == -1 && my_sviv(svn) < -IV_MAX) status = 0;
+        case 17: if (status == -1 && my_sviv(svn) < -IV_MAX) status = 0;
                  else if (status == 1 && n > IV_MAX) status = 0;
                  else XSRETURN_IV( (status == -1) ? -(IV)n : -n );
                  break;
-        case 17:
+        case 18:
         default: { IV tau = (status == 1) ? ramanujan_tau(n) : 0;
                    if (tau != 0 || status == -1 || n == 0)
                      XSRETURN_IV(tau);
@@ -2422,20 +2424,21 @@ carmichael_lambda(IN SV* svn)
       case 7:  _vcallsub_with_pp("chebyshev_psi"); break;
       case 8:  _vcallsub_with_pp("factorial"); break;  /* use PP */
       case 9:  _vcallsub_with_gmp(0.40,"sqrtint"); break;
-      case 10: _vcallsub_with_gmp(0.19,"exp_mangoldt"); break;
-      case 11: _vcallsub_with_gmp(0.22,"znprimroot"); break;
-      case 12: if (_XS_get_callgmp() >= 47) { /* Very fast */
+      case 10: _vcallsub_with_gmp(0.00,"qnr"); break;
+      case 11: _vcallsub_with_gmp(0.19,"exp_mangoldt"); break;
+      case 12: _vcallsub_with_gmp(0.22,"znprimroot"); break;
+      case 13: if (_XS_get_callgmp() >= 47) { /* Very fast */
                  _vcallsub_with_gmp(0.47,"hammingweight");
                } else {                       /* Better than PP */
                  char* ptr;  STRLEN len;  ptr = SvPV(svn, len);
                  XSRETURN_UV(mpu_popcount_string(ptr, len));
                }
                break;
-      case 13: _vcallsub_with_pp("hclassno"); break;
-      case 14: _vcallsub_with_gmp(0.00,"is_pillai"); break;
-      case 15: _vcallsub_with_gmp(0.52,"absint"); break;
-      case 16: _vcallsub_with_gmp(0.52,"negint"); break;
-      case 17:
+      case 14: _vcallsub_with_pp("hclassno"); break;
+      case 15: _vcallsub_with_gmp(0.00,"is_pillai"); break;
+      case 16: _vcallsub_with_gmp(0.52,"absint"); break;
+      case 17: _vcallsub_with_gmp(0.52,"negint"); break;
+      case 18:
       default: _vcallsub_with_gmp(0.32,"ramanujan_tau"); break;
     }
     objectify_result(aTHX_ svn, ST(0));
